--- a/css/index.css
+++ b/css/index.css
@@ -16,9 +16,7 @@ html {
     color: white;
 }
 body {
-    margin: 0;
-    height: 200vh;
-    
+    margin: 0;    
 }
 
 .container {
@@ -55,28 +53,31 @@ body {
 .tekst {
     position: absolute;
     background-color: black;
-    font-size: 110px;
     top: 1150px;
     margin-left: 380px;
-    padding: 20px;
-    padding-right: 100px;
     width: 500px;
-    
-    
+    padding: 20px;
 }
 
 #tekst1 {
-    line-height: 100px;
+    line-height: 100px;  
+    font-size: 110px;
+
 }
 
 .tekst2 {
+    float: right;
+    margin-top: 20px;
     position: absolute;
     background-color: black;
     font-size: 100px;
     text-align: center;
-    width: 550px;
-    margin: 20px ;
+    width: 430px;
+    left: 110px;
     text-shadow: 0px 0px  rgb(11, 202, 11) ;
+    font-size: 80px;  
+    letter-spacing: 3px;
+
    
 }
 
@@ -117,7 +118,6 @@ body {
     left: 50%;
     text-shadow: 0px 4px  rgb(11, 202, 11);
     transform: translate(-50%);
-    
 }
 
 ::-webkit-scrollbar {
