--- a/css/index.css
+++ b/css/index.css
@@ -1,13 +1,13 @@
  @font-face {
             font-family: 'blackfont'; 
-            src: url('../css/Nimbus\ Sans\ Black.otf') format('woff2'),
-                 url('../css/Nimbus\ Sans\ Black.otf') format('woff');
+            src: url('../media/Nimbus\ Sans\ Black.otf') format('woff2'),
+                 url('../media/Nimbus\ Sans\ Black.otf') format('woff');
  }
 
  @font-face {
             font-family: 'condblack'; 
-            src: url('../css/Nimbus\ Sans\ Cond\ L\ Black.otf') format('woff2'),
-                 url('../css/Nimbus\ Sans\ Cond\ L\ Black.otf') format('woff');
+            src: url('../media/fonts/Nimbus\ Sans\ Cond\ L\ Black.otf') format('woff2'),
+                 url('../media/fonts/ Sans\ Cond\ L\ Black.otf') format('woff');
  }
 
 html {
