--- a/css/main.css
+++ b/css/main.css
@@ -10,10 +10,12 @@
 
  @font-face {
             font-family: 'blackfont'; 
-            src: url('../media/fonts/ Sans\ Black.otf') format('woff2'),
-                 url('../media/fonts/ Sans\ Black.otf') format('woff');
+            src: url('../media/Nimbus\ Sans\ Black.otf') format('woff2'),
+                 url('../media/Nimbus\ Sans\ Black.otf') format('woff');
+ }
 
+ @font-face {
             font-family: 'condblack'; 
-            src: url('../media/fonts/ Sans\ Cond\ L\ Black.otf') format('woff2'),
+            src: url('../media/fonts/Nimbus\ Sans\ Cond\ L\ Black.otf') format('woff2'),
                  url('../media/fonts/ Sans\ Cond\ L\ Black.otf') format('woff');
  }
