--- a/css/index.css
+++ b/css/index.css
@@ -165,6 +165,10 @@ body {
 .opleiding-button span {
     margin-top: 10px;
 }
+.opleiding-button span a {
+    text-decoration: none;
+    color: white;
+}
 
 
 /* AUDIOVISUELE MEDIA */
