--- a/css/index.css
+++ b/css/index.css
@@ -158,109 +158,11 @@ body {
     position: absolute;
     top: 9rem;
     left: 47rem;
-    padding-top: 1.5rem;
 }
 
-
-.opleiding-button span {
-    margin-top: 10px;
-}
-.opleiding-button span a {
+.opleiding-button a {
     text-decoration: none;
     color: white;
 }
 
-
-/* AUDIOVISUELE MEDIA */
-
-.opleiding-section {
-    width: 100%;
-    font-size: 2.8rem;
-    margin-top: 3rem;
-    display: flex;
-    justify-content: space-between;
-    position: absolute;
-}
-
-.left {
-    width: 50%;
-    padding-top: 3rem;
-    padding-left: 13rem;
-    line-height: 1rem;
-}
-.right {
-    display: flex;
-    justify-content: center;
-    padding-right: 8rem;
-    width: 50%;
-}
-.square {
-    width: 275px;
-    height: 275px;
-    background-color:  var( --Mediavormgeven-Kleur);    
-}
-
-.opleiding-button {
-    background-color: black;
-    text-align: center;
-    color: white;
-    width: 14rem;
-    height: 4rem;
-    position: absolute;
-    top: 9rem;
-    left: 47rem;
-    padding-top: 1.5rem;
-}
-
-
-.opleiding-button span {
-    margin-top: 10px;
-}
-
-
-
-
-.opleiding-section {
-    width: 100%;
-    font-size: 2.8rem;
-    margin-top: 3rem;
-    display: flex;
-    justify-content: space-between;
-    position: absolute;
-}
-
-.left {
-    width: 50%;
-    padding-top: 3rem;
-    padding-left: 13rem;
-    line-height: 1rem;
-}
-.right {
-    display: flex;
-    justify-content: center;
-    padding-right: 8rem;
-    width: 50%;
-}
-.square {
-    width: 275px;
-    height: 275px;
-    background-color:  var( --Mediavormgeven-Kleur);    
-}
-
-.opleiding-button {
-    background-color: black;
-    text-align: center;
-    color: white;
-    width: 14rem;
-    height: 4rem;
-    position: absolute;
-    top: 9rem;
-    left: 47rem;
-    padding-top: 1.5rem;
-}
-
-
-.opleiding-button span {
-    margin-top: 10px;
-}
 
