--- a/css/Opleiding.css
+++ b/css/Opleiding.css
@@ -52,15 +52,18 @@ body {
 .onderwerp {
     position: absolute;
     top: 28%;
-    line-height: 3em;
     width: 75%;
     left: 50%;
     transform: translate(-50%);
     margin-top: 0;
 }
 .onderwerp h2{
+    line-height: 3em;
     font-size: 3.5em;
 
+}
+.onderwerp p{
+    font-size: 1.75em;
 }
 .mv {
     color: var(--Mediavormgeven-Kleur);
