--- a/css/index.css
+++ b/css/index.css
@@ -122,19 +122,18 @@ body {
 }
 
 /* MEDIA VORMGEVING */
-.opleiding-section {
+.opleiding-section-right {
     width: 100%;
     font-size: 2.8rem;
-    margin-top: 3rem;
     display: flex;
     justify-content: space-between;
-    position: absolute;
 }
 
 .left {
     width: 50%;
     padding-top: 3rem;
-    padding-left: 13rem;
+    padding-left: 8.8rem;
+    padding-right: 8rem;
     line-height: 1rem;
 }
 .right {
@@ -143,9 +142,15 @@ body {
     padding-right: 8rem;
     width: 50%;
 }
-.square {
-    width: 275px;
-    height: 275px;
+.square-left {
+    width: 250px;
+    height: 250px;
+    background-color:  var( --Mediavormgeven-Kleur);   
+    margin-left: 8rem; 
+}
+.square-right {
+    width: 250px;
+    height: 250px;
     background-color:  var( --Mediavormgeven-Kleur);    
 }
 
@@ -166,4 +171,50 @@ body {
 .opleiding-button * {
     text-decoration: none;
     color: white;
+}
+.opleiding-button span {
+    text-decoration: none;
+    color: white;
+    height: 40px;
+}
+
+.button-1 {
+    padding: 0.2rem;
+    left: 48rem;
+    margin-top: 3.2rem;
+}
+.button-2 {
+    padding: 0.2rem;
+    margin-top: 18.8rem;
+    left: 4rem;
+}
+.button-3 {
+    padding: 0.2rem;
+    left: 48rem;
+    margin-top: 34.5rem;
+}
+.button-4 {
+    padding: 0.2rem;
+    margin-top: 50.1rem;
+    left: 4rem;
+}
+.button-5 {
+    padding: 0.2rem;
+    left: 48rem;
+    margin-top: 34.5rem;
+}
+.button-6 {
+    padding: 0.2rem;
+    left: 48rem;
+    margin-top: 34.5rem;
+}
+.button-7 {
+    padding: 0.2rem;
+    margin-top: 50.1rem;
+    left: 4rem;
+}
+
+
+.opleidingen-whitespace {
+    height: 3rem;
 }
