--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,11 @@
-:root{
-    --Audiovisuele-Media-Kleur: rgb(255, 221, 0);
-    --Media-Management-Kleur: rgb(245, 156, 0);
-    --Mediavormgeven-Kleur: rgb(228, 4, 40);
-    --Redactiemedewerker-Kleur: rgb(231, 49, 136);
-    --Creative-Productie-Kleur: rgb(120, 63, 145);
-    --Mediatechnologie-Kleur: rgb(0, 99, 175);
-    --podium-En-Evenemententechniek-Kleur: rgb(45, 184, 197);
+:root{ 
+    --Mediavormgeven-Kleur: #CF3230;
+    --Audiovisuele-Media-Kleur: #FFCF52;
+    --Media-Management-Kleur: #DD6C28;
+    --Redactiemedewerker-Kleur: #E1538F;
+    --Creative-Productie-Kleur: #614589;
+    --Mediatechnologie-Kleur: #5D7BBA;
+    --podium-En-Evenemententechniek-Kleur: #83C2D5;
 }
 
  @font-face {
