--- a/css/Opleiding.css
+++ b/css/Opleiding.css
@@ -1,22 +1,14 @@
 body {
     margin: 0;
-    text-transform: uppercase;
     padding: 0;
     font-family: condblack;
+    overflow: hidden;
 }
 
-.header {
 
-    font-size: 3.7em;
-    width: 100vw;
-    color: white;
-    position: absolute;
-    background-color: var(--Mediavormgeven-Kleur);
-}
 
 .opleidingTitel {
     line-height: 100px;
-    margin: 15% 7.5% 0;
 }
 
 .icons {
@@ -41,50 +33,36 @@ body {
     word-wrap: break-word;
     background-color: #000;
     position: absolute;
-    top: 25%;
+    top: 25vh;
     left: 50%;
     transform: translate(-50%);
     width: 75%;
     margin-bottom: 0%;
     text-align: center;
+    text-transform: uppercase;
 }
 
-.onderwerp {
+.kop1 {
     position: absolute;
-    top: 27%;
+    top: 28vh;
     width: 75%;
     left: 50%;
 
     transform: translate(-50%);
     margin-top: 0;
 }
-.onderwerp h2{
+
+.kop1 h2 {
+    text-transform: uppercase;
     line-height: 1em;
     font-size: 3.5em;
     margin-bottom: 0%;
 
 }
-.onderwerp p{
+
+.kop1 p {
     margin-top: 2%;
-    font-family: Arial, Helvetica, sans-serif!important;
+    font-family: Arial, Helvetica, sans-serif !important;
     font-weight: 600;
-    font-size: 1.75em;
-}
-.text-foto{
-    font-family: Arial, Helvetica, sans-serif;
-    position: absolute;
-    top: 50%;
-    font-size: 1.2em;
-    left: 50%;
-    transform: translate(-50%);
-    display: grid;
-    grid-template-columns: auto auto;
-    width: 75%;
-}
-.text-foto img{
-    width: 35vw;
-    border: rgb(228, 4, 40) solid 10px;
-}
-.mv {
-    color: var(--Mediavormgeven-Kleur);
+    font-size: 1.41em;
 }
