--- a/css/index.css
+++ b/css/index.css
@@ -4,9 +4,9 @@ html {
     color: white;
     scroll-behavior: smooth;
 }
+
 body {
     margin: 0;
-    height: 200vh;
     scroll-behavior: smooth;
 }
 
@@ -50,7 +50,7 @@ body {
 }
 
 #tekst1 {
-    line-height: 100px;  
+    line-height: 100px;
     font-size: 110px;
 
 }
@@ -64,8 +64,8 @@ body {
     text-align: center;
     width: 430px;
     left: 110px;
-    text-shadow: 0px 0px  rgb(11, 202, 11) ;
-    font-size: 80px;  
+    text-shadow: 0px 0px rgb(11, 202, 11);
+    font-size: 80px;
     letter-spacing: 3px;
 }
 
@@ -83,11 +83,16 @@ body {
 }
 
 @keyframes moveUpDown {
-    0%, 100% {
-        margin-top: 1450px; /* Initial position */
+
+    0%,
+    100% {
+        margin-top: 1450px;
+        /* Initial position */
     }
+
     50% {
-        margin-top: 1500px; /* Middle position (adjust as needed) */
+        margin-top: 1500px;
+        /* Middle position (adjust as needed) */
     }
 }
 
@@ -121,27 +126,30 @@ body {
     padding-right: 8rem;
     line-height: 1rem;
 }
+
 .right {
     display: flex;
     justify-content: center;
     padding-right: 8rem;
     width: 50%;
 }
+
 .square-left {
     position: absolute;
     width: 250px;
     height: 250px;
     right: 41rem;
     z-index: auto;
-    background-color:  var( --Mediavormgeven-Kleur);   
+    background-color: var(--Mediavormgeven-Kleur);
 
 
 }
+
 .square-right {
     position: absolute;
     width: 250px;
     height: 250px;
-    background-color:  var( --Mediavormgeven-Kleur);
+    background-color: var(--Mediavormgeven-Kleur);
 }
 
 @keyframes hoverAnimation {
@@ -153,6 +161,7 @@ body {
         z-index: auto;
         pointer-events: all;
     }
+
     1% {
         position: absolute;
         width: 250px;
@@ -161,6 +170,7 @@ body {
         z-index: auto;
         pointer-events: none;
     }
+
     10% {
         position: absolute;
         width: 250px;
@@ -169,6 +179,7 @@ body {
         z-index: auto;
         pointer-events: none;
     }
+
     50% {
         position: absolute;
         left: 0%;
@@ -177,6 +188,7 @@ body {
         z-index: 10;
         pointer-events: none;
     }
+
     99% {
         position: absolute;
         left: 0%;
@@ -185,6 +197,7 @@ body {
         z-index: 10;
         pointer-events: none;
     }
+
     100% {
         position: absolute;
         left: 0%;
@@ -204,6 +217,7 @@ body {
         z-index: auto;
         pointer-events: all;
     }
+
     99% {
         position: absolute;
         width: 250px;
@@ -212,6 +226,7 @@ body {
         z-index: auto;
         pointer-events: none;
     }
+
     90% {
         position: absolute;
         width: 250px;
@@ -220,6 +235,7 @@ body {
         z-index: auto;
         pointer-events: none;
     }
+
     50% {
         position: absolute;
         left: 0%;
@@ -228,6 +244,7 @@ body {
         z-index: 10;
         pointer-events: none;
     }
+
     1% {
         position: absolute;
         left: 0%;
@@ -236,6 +253,7 @@ body {
         z-index: 10;
         pointer-events: none;
     }
+
     0% {
         position: absolute;
         left: 0%;
@@ -255,17 +273,19 @@ body {
         height: 250px;
         right: 41rem;
         z-index: auto;
-        pointer-events:all;
+        pointer-events: all;
 
     }
-  1% {
-    position: absolute;
+
+    1% {
+        position: absolute;
         width: 250px;
         height: 250px;
         right: 41rem;
         z-index: auto;
-        pointer-events:none;
-  }
+        pointer-events: none;
+    }
+
     10% {
         position: absolute;
         width: 250px;
@@ -274,6 +294,7 @@ body {
         z-index: auto;
         pointer-events: none;
     }
+
     50% {
         position: absolute;
         right: 0%;
@@ -283,6 +304,7 @@ body {
         pointer-events: none;
 
     }
+
     99% {
         position: absolute;
         right: 0%;
@@ -291,6 +313,7 @@ body {
         z-index: 10;
         pointer-events: none;
     }
+
     100% {
         position: absolute;
         right: 0%;
@@ -301,6 +324,7 @@ body {
 
     }
 }
+
 @keyframes hoverAnimation1Close {
     100% {
         position: absolute;
@@ -313,14 +337,14 @@ body {
     }
 
     99% {
-         position: absolute;
+        position: absolute;
         width: 250px;
         height: 250px;
         right: 41rem;
         z-index: auto;
         pointer-events: none;
     }
-  
+
     90% {
         position: absolute;
         width: 250px;
@@ -330,6 +354,7 @@ body {
         pointer-events: none;
 
     }
+
     50% {
         position: absolute;
         right: 0%;
@@ -339,6 +364,7 @@ body {
         pointer-events: none;
 
     }
+
     1% {
         position: absolute;
         right: 0%;
@@ -347,6 +373,7 @@ body {
         z-index: 10;
         pointer-events: none;
     }
+
     0% {
         position: absolute;
         right: 0%;
@@ -361,12 +388,15 @@ body {
 .hoverAnimation {
     animation: hoverAnimation 2s ease-in-out forwards;
 }
+
 .hoverAnimationClose {
     animation: hoverAnimationClose 2s ease-in-out forwards;
 }
+
 .hoverAnimation1 {
     animation: hoverAnimation1 2s ease-in-out forwards;
 }
+
 .hoverAnimation1Close {
     animation: hoverAnimation1Close 2s ease-in-out forwards;
 }
@@ -389,6 +419,7 @@ body {
     text-decoration: none;
     color: white;
 }
+
 .opleiding-button span {
     text-decoration: none;
     color: white;
@@ -403,32 +434,38 @@ body {
     left: 48rem;
     margin-top: 3.2rem;
 }
+
 .button-2 {
     padding: 0.2rem;
     margin-top: 18.8rem;
     left: 4rem;
 }
+
 .button-3 {
     padding: 0.2rem;
     left: 48rem;
     margin-top: 34.5rem;
 }
+
 .button-4 {
     padding: 0.2rem;
     margin-top: 50.1rem;
     left: 4rem;
 }
+
 .button-5 {
     padding: 0.2rem;
     left: 48rem;
     margin-top: 65.7rem;
 }
+
 .button-6 {
     padding: 0.2rem;
     left: 48rem;
     margin-top: 97rem;
     z-index: 5;
 }
+
 .button-7 {
     padding: 0.2rem;
     margin-top: 81.3rem;
@@ -447,6 +484,7 @@ body {
     z-index: -10;
 
 }
+
 .background-img-2 {
     width: 50%;
     position: absolute;
@@ -471,7 +509,7 @@ body {
     cursor: pointer;
 }
 
-.mediamaker{ 
+.mediamaker {
     position: relative;
     top: 90px;
     left: -350px !important;
@@ -520,59 +558,67 @@ body {
     height: 100%;
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(1, auto); /* Two columns */
-    justify-items: center; /* Centers the items horizontally within the grid */
-    align-items: center; /* Centers the items vertically within the grid */
+    grid-template-columns: repeat(1, auto);
+    /* Two columns */
+    justify-items: center;
+    /* Centers the items horizontally within the grid */
+    align-items: center;
+    /* Centers the items vertically within the grid */
 }
 
 
 @keyframes buttonshow {
     0% {
-opacity: 0;
-margin-top: -100px;
-display: none;
+        opacity: 0;
+        margin-top: -100px;
+        display: none;
     }
+
     1% {
         opacity: 0;
-margin-top: 0px;
-display: block;
+        margin-top: 0px;
+        display: block;
     }
+
     50% {
         opacity: 0;
-margin-top: 0px;
-display: block;
+        margin-top: 0px;
+        display: block;
     }
+
     100% {
-opacity: 1;
-margin-top: 0px;
-display: block;
+        opacity: 1;
+        margin-top: 0px;
+        display: block;
     }
 }
 
 @keyframes buttonhide {
     100% {
-opacity: 0;
-margin-top: -100px;
-display: none;
+        opacity: 0;
+        margin-top: -100px;
+        display: none;
     }
+
     99% {
         opacity: 0;
-margin-top: 0px;
-display: block;
+        margin-top: 0px;
+        display: block;
     }
+
     50% {
         opacity: 0;
-margin-top: 0px;
-display: block;
+        margin-top: 0px;
+        display: block;
     }
+
     0% {
-opacity: 1;
-margin-top: 0px;
-display: block;
+        opacity: 1;
+        margin-top: 0px;
+        display: block;
     }
 }
 
 .link {
     text-decoration: none;
 }
-
